parallax and form img

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <!-- font awesome ICONS-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- custom style -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -27,7 +28,7 @@
                 <h1 class="headline">AGENZIA PER <br> MATRIMONI <br> OVER 60</h1>
                 <h2 class="head-usp">Gallina vecchia</h2>
                 <h2 class="head-usp ml-md-5">Noi conosciamo, <br> non domandiamo</h2>
-                <a class="btn btn-primary cta " href="#contact-form">Registrati</a>
+                <a class="btn btn-primary cta" href="#contact-form">Registrati</a>
             </div>
         </div>
     </header>
@@ -36,17 +37,17 @@
     <!--section Carousel -->
     <section class="container-fluid section-carousel py-5">
         <div class="row justify-content-center py-5">
-            <h2 class="subtitle text-center col-12 col-md-8">
+            <h2 class="subtitle text-center col-12 col-md-8 rellax" data-rellax-percentage="0" data-rellax-speed=".8">
                 I nostri fotografi non sono MAI invadenti
             </h2>
-            <p class="lead col-12 col-md-8 py-3">
-                Dopo il giorno piu bello della vostra vita vi ritroverete dei ricordi da sfogliare in ogni vlota per
+            <p class="lead col-12 col-md-8 py-3 rellax" data-rellax-percentage="0" data-rellax-speed=".6">
+                Dopo il giorno piu bello della vostra vita vi ritroverete dei ricordi da sfogliare ogni vlota per
                 rivedere questo incredibile momento...
             </p>
             <br>
             <!-- carousel body -->
 
-            <div id="carouselExampleControls" class="carousel slide col-12 col-md-8" data-ride="carousel">
+            <div id="carouselExampleControls" class="carousel slide col-12 col-md-8 rellax" data-rellax-percentage="0" data-rellax-speed=".4" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="image img1"></div>
@@ -74,27 +75,27 @@
 
     <!--  split & subtitile -->
     <section class="subtitle-split container py-5">
-        <h2 class="subtitle mt-5">
+        <h2 class="subtitle mt-5 mb-4" data-aos="zoom-in-up">
             Scopri la nostra quota 100
         </h2>
         <div class="first-info-wrap row">
             <article class="first-info col-12 col-md-6 pr-md-5">
 
-                <p class="lead py-2">
+                <p class="lead py-2 rellax" data-rellax-percentage="0" data-rellax-speed="0" >
                     Se voi avete 70 anni , e il vostro partner 30 accederete a degli ornamenti extra !
                 </p>
 
-                <p class="lead py-2">
+                <p class="lead py-2 rellax" data-rellax-percentage="0" data-rellax-speed=".2">
                     Se avete 80 anni e il vostro partner 20 , garantiamo il distacco dei suoi genitori nella tavolata.
                 </p>
 
-                <p class="lead py-2">
+                <p class="lead py-2 rellax" data-rellax-percentage="0" data-rellax-speed=".4">
                     Se entrambi avete 50 anni , potete avere meta' matrimonio in una giornata, e l' altra meta' in un
                     altro momento!
                 </p>
 
             </article>
-            <aside class="first-info-picture col-11 col-md-6 m-auto">
+            <aside class="first-info-picture col-11 col-md-6 m-auto rellax" data-rellax-percentage=".4" data-rellax-speed="4">
             </aside>
         </div>
     </section>
@@ -103,7 +104,7 @@
     <!--thin banner -->
     <section class="container-fluid thin-banner">
         <div class="row justify-content-center">
-            <h2 class="text-center">
+            <h2 class="text-center" data-aos="zoom-in-up">
                 Siamo entusiasti della vostra scelta
             </h2>
         </div>
@@ -111,9 +112,9 @@
     <!-- /thin banner -->
 
     <!--  3 motivation -->
-    <section class="container py-5">
-        <div class="row py-5">
-            <div class="motivation col-12 col-md-4">
+    <section class="container pt-5">
+        <div class="row pt-3">
+            <div class="motivation col-12 col-md-4 rellax" data-rellax-percentage=".3" data-rellax-speed="3">
                 <h2 class="motivation-title text-center">Il nostro manager...</h2>
 
                 <span class="iconout">
@@ -124,7 +125,7 @@
                     Anche il nostro manager é sposato con una ragazza di 22 anni, lui ne ha adesso 65, ed é il suo entusiasmo a portare avanti la baracca
                 </p>
             </div>
-            <div class="motivation col-12 col-md-4">
+            <div class="motivation col-12 col-md-4 rellax" data-rellax-percentage=".2" data-rellax-speed="2">
                 <h2 class="motivation-title text-center">Ovunque voi vogliate</h2>
 
                 <span class="iconout">
@@ -135,7 +136,7 @@
                     Vi basta farci sapere dove volete trascorrere il matrimonio, abbiamo molte location sulla lista, o diteci voi la vostra location preferita
                 </p>
             </div>
-            <div class="motivation col-12 col-md-4">
+            <div class="motivation col-12 col-md-4 rellax" data-rellax-percentage=".1" data-rellax-speed="1">
                 <h2 class="motivation-title text-center">Pensiamo a tutto</h2>
 
                 <span class="iconout">
@@ -171,8 +172,9 @@
         <div class="container">
             <div class="row">
                 
-                <div class="col-12 col-md-6 d-flex justify-content-center">
-                    <h2 class="col-12 py-4 text-center">Contattaci !</h2>
+                <div class="col-12 col-md-6">
+                    <h2 class="col-12 py-4 text-center" data-aos="zoom-in-up">Contattaci !</h2>
+                    <i class="far fa-envelope my-4 contacts-icon"></i>
                 </div>
 
                 <div class="col-12 col-md-6 pl-md-5">
@@ -249,6 +251,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
+    <!-- aos -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- rellax -->
+    <script src="rellax.min.js"></script>
 
     <script src="main.js"></script>
 
